--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
@@ -13,6 +15,7 @@
     "react-konva": "^19.0.10",
     "react-router-dom": "^7.9.1",
     "react-scripts": "5.0.1",
+    "three": "^0.180.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
