--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@imgly/background-removal": "^1.7.0",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
     "@testing-library/dom": "^10.4.1",
