--- a/packages/customer-app/package.json
+++ b/packages/customer-app/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@monkind/shared": "workspace:*",
     "@imgly/background-removal": "^1.7.0",
+    "@monkind/shared": "workspace:*",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
     "@testing-library/dom": "^10.4.1",
@@ -21,9 +21,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
