重構ProductMaintenance.jsx，然後寫了很多文件供參考減少token

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -10,6 +10,7 @@
     "./components/Editor/utils": "./components/Editor/utils/index.js",
     "./components/Preview": "./components/Preview/index.js",
     "./components/Preview/ProductThumbnail": "./components/Preview/ProductThumbnail.jsx",
+    "./components/ProductMaintenance": "./components/ProductMaintenance/index.js",
     "./services/api": "./services/index.js",
     "./utils": "./utils/index.js"
   },
